--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ x<!DOCTYPE html>
       gap: 10px;
       grid-template-columns: repeat(10, minmax(80px, 1fr));
       padding: 10px;
-      margin: auto;
+      margin: 20px;
       object-fit: contain;
 
     }
