--- a/พาวเวอร์แอมป์.html
+++ b/พาวเวอร์แอมป์.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>รายละเอียดสินค้า</title>
+  <title>พาวเวอร์แอมป์</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -587,14 +587,14 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="mainweb.html"><img
+      <a class="navbar-brand" href="index.html"><img
           src="logo.jpg" height="30" width="30"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
         <div class="navbar-nav">
-          <a class="nav-link" href="mainweb.html">หน้าแรก</a>
+          <a class="nav-link" href="index.html">หน้าแรก</a>
           <a class="nav-link" href="aboutus.html">เกี่ยวกับเรา</a>
           <div class="menu">
             <div class="menu-button"><a class="nav-link">สินค้า</a></div>
@@ -604,7 +604,7 @@
               <a href="ตู้คอลัมม์.html">ตู้เสียงคอลัมม์</a>
               <a href="ดอกลำโพง.html">ดอกลำโพง</a>
               <a href="พาวเวอร์แอมป์.html">พาวเวอร์แอมป์</a>
-              <a href="วอยส์.html">วอยส์</a>
+              <a href="ปากแหลม.html">ปากแหลม</a>
               <a href="สายลำโพง.html">สายลำโพง</a>
               <a href="ไมโครโฟน.html">ไมโครโฟน</a>
               <a href="มิกเซฮร์.html">มิกเซอร์</a>
@@ -634,7 +634,7 @@
 
   <nav aria-label="breadcrumb" style="margin: 20px;">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="mainweb.html">หน้าแรก</a></li>
+      <li class="breadcrumb-item"><a href="index.html">หน้าแรก</a></li>
       <li class="breadcrumb-item"><a href="พาวเวอร์แอมป์.html">พาวเวอร์แอมป์</a></li>
     </ol>
   </nav>
