--- a/ระบบKTV.html
+++ b/ระบบKTV.html
@@ -215,13 +215,14 @@
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="mainweb.html" height="30" width="30"></a>
+      <a class="navbar-brand" href="index.html"><img
+          src="logo.jpg" height="30" width="30"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
         <div class="navbar-nav">
-          <a class="nav-link" href="mainweb.html">หน้าแรก</a>
+          <a class="nav-link" href="index.html">หน้าแรก</a>
           <a class="nav-link" href="aboutus.html">เกี่ยวกับเรา</a>
           <div class="menu">
             <div class="menu-button"><a class="nav-link">สินค้า</a></div>
@@ -230,26 +231,26 @@
               <a href="ตู้เสียงกลาง.html">ตู้เสียงกลาง</a>
               <a href="ตู้คอลัมม์.html">ตู้เสียงคอลัมม์</a>
               <a href="ดอกลำโพง.html">ดอกลำโพง</a>
-              <a href="พาวเวอร์แแอมป์.html">พาวเวอร์แอมป์</a>
+              <a href="พาวเวอร์แอมป์.html">พาวเวอร์แอมป์</a>
               <a href="ปากแหลม.html">ปากแหลม</a>
               <a href="สายลำโพง.html">สายลำโพง</a>
               <a href="ไมโครโฟน.html">ไมโครโฟน</a>
-              <a href="มิกเซอร์.html">มิกเซอร์</a>
+              <a href="มิกเซฮร์.html">มิกเซอร์</a>
               <a href="ครอส.html">ดิจิตัลครอสโอเวอร์</a>
               <a href="ปลั๊กไฟ.html">ปลั๊กไฟ</a>
               <a href="เฟรม.html">เฟรมแขวน</a>
 
             </div>
+          </div>
+          <div class="menu">
+            <div class="menu-button"><a class="nav-link">บริการ</a></div>
+            <div class="dropdown">
+              <a href="รับติดตั้ง.html">รับติดตั้ง</a>
+              <a href="ปรับจูนตู้.html">ปรับจูนตู้</a>
+              <a href="รับผลิต.html">รับผลิต</a>
+              <a href="ระบบKTV.html">ระบบKTV</a>
             </div>
-            <div class="menu">
-              <div class="menu-button"><a class="nav-link">บริการ</a></div>
-              <div class="dropdown">
-                <a  href="รับติดตั้ง.html">รับติดตั้ง</a>
-                <a  href="ปรับจูนตู้.html">ปรับจูนตู้</a>
-                <a  href="รับผลิต.html">รับผลิต</a>
-                <a  href="ระบบKTV.html">ระบบKTV</a>
-              </div>
-            </div>
+          </div>
           <a class="nav-link" href="contact.html">ติดต่อเรา</a>
         </div>
         <form class="d-flex">
@@ -261,7 +262,7 @@
 
   <nav aria-label="breadcrumb" style="margin: 20px;">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="mainweb.html">หน้าแรก</a></li>
+      <li class="breadcrumb-item"><a href="index.html">หน้าแรก</a></li>
       <li class="breadcrumb-item"><a href="ระบบKTV.html">ระบบKTV</a></li>
     </ol>
   </nav>
