--- a/เซ็ตแร็ค.html
+++ b/เซ็ตแร็ค.html
@@ -585,14 +585,14 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="mainweb.html"><img
+      <a class="navbar-brand" href="index.html"><img
           src="logo.jpg" height="30" width="30"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
         <div class="navbar-nav">
-          <a class="nav-link" href="mainweb.html">หน้าแรก</a>
+          <a class="nav-link" href="index.html">หน้าแรก</a>
           <a class="nav-link" href="aboutus.html">เกี่ยวกับเรา</a>
           <div class="menu">
             <div class="menu-button"><a class="nav-link">สินค้า</a></div>
@@ -632,7 +632,7 @@
 
   <nav aria-label="breadcrumb" style="margin: 20px;">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="mainweb.html">หน้าแรก</a></li>
+      <li class="breadcrumb-item"><a href="index.html">หน้าแรก</a></li>
       <li class="breadcrumb-item"><a href="เซ็ตแร็ค.html">เซ็ตแร็ค</a></li>
     </ol>
   </nav>
