--- a/Microphone-1.html
+++ b/Microphone-1.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>ตู้คอลัมม์</title>
+  <title>ไมค์สาย</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -103,6 +103,15 @@
       font-weight: bold;
     }
 
+    .none-product {
+      color: #626262;
+      font-size: 4rem;
+      text-align: center;
+      margin-top: 100px;
+      margin-bottom: 400px;
+    }
+
+
     .breadcrumb {
     background-color: transparent;
     padding: 0;
@@ -129,42 +138,6 @@
     color: #0081f2;
   }
 
-  .none-product {
-      color: #626262;
-      font-size: 4rem;
-      text-align: center;
-      margin-top: 100px;
-    
-    }
-
-    .none-product img {
-      width: 60px;
-      height: auto;
-      margin-top: 10px;
-      margin-bottom: 400px;
-    }
-
-
-    .product-grid {
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-      gap: 10px;
-      padding: 20px;
-      margin: 10px;
-      align-items: stretch;
-    }
-
-    .product-card {
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 20px;
-      margin: 10px; 
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      max-height: 400px;
-    }
 
     .product-grid {
       display: grid;
@@ -669,21 +642,18 @@
   <nav aria-label="breadcrumb" style="margin: 20px;">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="index.html">หน้าแรก</a></li>
-      <li class="breadcrumb-item"><a href="ตู้คอลัมม์.html">ตู้คอลัมม์</a></li>
-     
+      <li class="breadcrumb-item"><a href="Microphone-1.html">ไมค์สาย</a></li>
     </ol>
   </nav>
 
 
   <div class="container">
-    <h2 class="text-center mb-4">สินค้าชนิด ตู้คอลัมม์</h2>
+    <h2 class="text-center mb-4">สินค้าชนิด ไมค์สาย</h2>
+  
    
-  <p class="none-product">สอบถามสั่งซื้อได้ที่</p>
-  <div class="none-product">
-    <a href="https://facebook.com/weerapong.sound.system"><img
-        src="https://img.icons8.com/color/48/facebook-new.png" height="40"></a>
-    <a href="https://line.me/ti/p/-LlBfCZKfh"><img src="https://img.icons8.com/color/48/line-me.png" height="40"></a>
-  </div>
+
+
+  <p class="none-product">ยังไม่มีสินค้า</p>
   </div>
 
 
@@ -701,7 +671,7 @@
           <div class="mt-2">
             <a href="https://www.facebook.com/weerapong.sound.system"><img
                 src="https://img.icons8.com/color/48/facebook-new.png" width="24" alt="Facebook"></a>
-            <a href="https://line.me/ti/p/-LlBfCZKfh"><img src="https://img.icons8.com/color/48/line-me.png" width="24" alt="Line"></a>
+            <a href="#"><img src="https://img.icons8.com/color/48/line-me.png" width="24" alt="Line"></a>
             <a href="#"><img src="th-removebg-preview.png" width="24" alt="Tiktok"></a>
 
           </div>
