--- a/ครอส.html
+++ b/ครอส.html
@@ -588,7 +588,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="mainweb.html"><img
+      <a class="navbar-brand" href="index.html"><img
           src="logo.jpg" height="30" width="30"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -667,7 +667,7 @@
           <div class="product-name">MARANI DPA260P+</div>
         </a>
         <p class="product-descript">รายละเอียดสินค้า</p>
-        <div class="price">13500 ฿</div>
+        <div class="price">10500 ฿</div>
         <div class="product-footer">
           <a href="https://facebook.com/weerapong.sound.system"><img
               src="https://img.icons8.com/color/48/facebook-new.png" height="40"></a>
