--- a/ปรับจูนตู้.html
+++ b/ปรับจูนตู้.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>Wss</title>
+  <title>Alignment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -180,7 +180,7 @@
       text-decoration: underline;
     }
 
- 
+
     @media (max-width: 480px) {
       .header-content img {
     max-width: 50px;
@@ -271,20 +271,22 @@
   <nav aria-label="breadcrumb" style="margin: 20px;">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="index.html">หน้าแรก</a></li>
-      <li class="breadcrumb-item"><a href="รับติดตั้ง.html">รับติดตั้ง</a></li>
+      <li class="breadcrumb-item"><a href="Alignment.html">Alignment</a></li>
+  
     </ol>
   </nav>
 
+
   <section class="portfolio-section container">
-    <h2 class="portfolio-title">รับติดตั้งเครื่องเสียง</h2>
+    <h2 class="portfolio-title">Alignment</h2>
 
     <div class="row g-4">
       <!-- การ์ดที่ 1 -->
       <div class="col-md-4 d-flex">
         <div class="card card-portfolio w-100">
-          <img src="images/project1.jpg" class="card-img-top" alt="ติดตั้งลำโพงกลางแจ้ง">
+          <img src="images/project1.jpg" class="card-img-top" alt="">
           <div class="card-body">
-            <h5 class="card-title">ติดตั้งลำโพงกลางแจ้ง</h5>
+            <h5 class="card-title"></h5>
             <p class="card-text"></p>
             <div class="price-range">ราคาเริ่มต้น: ฿5,000</div>
           </div>
@@ -294,9 +296,9 @@
       <!-- การ์ดที่ 2 -->
       <div class="col-md-4 d-flex">
         <div class="card card-portfolio w-100">
-          <img src="images/project2.jpg" class="card-img-top" alt="ติดตั้งเครื่องเสียงในร้านอาหาร">
+          <img src="images/project2.jpg" class="card-img-top" alt="">
           <div class="card-body">
-            <h5 class="card-title">ติดตั้งเครื่องเสียงในร้านอาหาร</h5>
+            <h5 class="card-title"></h5>
             <p class="card-text"></p>
             <div class="price-range">ราคาเริ่มต้น: ฿8,000</div>
           </div>
@@ -306,9 +308,9 @@
       <!-- การ์ดที่ 3 -->
       <div class="col-md-4 d-flex">
         <div class="card card-portfolio w-100">
-          <img src="images/project3.jpg" class="card-img-top" alt="ระบบเสียงในห้องประชุม">
+          <img src="images/project3.jpg" class="card-img-top" alt="">
           <div class="card-body">
-            <h5 class="card-title">ระบบเสียงในห้องประชุม</h5>
+            <h5 class="card-title"></h5>
             <p class="card-text"></p>
             <div class="price-range">ราคาเริ่มต้น: ฿12,000</div>
           </div>
@@ -317,10 +319,8 @@
     </div>
   </section>
 
-
-
-  <!-- footer อย่ายุ่ง -->
-  <footer class="footer">
+   <!-- footer อย่ายุ่ง -->
+   <footer class="footer">
     <div class="container">
       <div class="row">
 
@@ -381,6 +381,7 @@
       </div>
     </div>
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
