--- a/มิกเซอร์.html
+++ b/มิกเซอร์.html
@@ -588,14 +588,14 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="mainweb.html"><img
+      <a class="navbar-brand" href="index.html"><img
           src="logo.jpg" height="30" width="30"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
         <div class="navbar-nav">
-          <a class="nav-link" href="mainweb.html">หน้าแรก</a>
+          <a class="nav-link" href="index.html">หน้าแรก</a>
           <a class="nav-link" href="aboutus.html">เกี่ยวกับเรา</a>
           <div class="menu">
             <div class="menu-button"><a class="nav-link">สินค้า</a></div>
@@ -605,7 +605,7 @@
               <a href="ตู้คอลัมม์.html">ตู้เสียงคอลัมม์</a>
               <a href="ดอกลำโพง.html">ดอกลำโพง</a>
               <a href="พาวเวอร์แอมป์.html">พาวเวอร์แอมป์</a>
-              <a href="ปากหลม.html">ปากแหลม</a>
+              <a href="ปากแหลม.html">ปากแหลม</a>
               <a href="สายลำโพง.html">สายลำโพง</a>
               <a href="ไมโครโฟน.html">ไมโครโฟน</a>
               <a href="มิกเซฮร์.html">มิกเซอร์</a>
@@ -635,7 +635,7 @@
 
   <nav aria-label="breadcrumb" style="margin: 20px;">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="mainweb.html">หน้าแรก</a></li>
+      <li class="breadcrumb-item"><a href="index.html">หน้าแรก</a></li>
       <li class="breadcrumb-item"><a href="มิกเซอร์.html">มิกเซอร์</a></li>
     </ol>
   </nav>
@@ -651,7 +651,7 @@
           <div class="product-name">Mixer Caflar</div>
         </a>
         <p class="product-descript">รายละเอียดสินค้า</p>
-        <div class="price">2400 ฿</div>
+        <div class="price">2590 ฿</div>
         <div class="product-footer">
           <a href="https://facebook.com/weerapong.sound.system"><img
               src="https://img.icons8.com/color/48/facebook-new.png" height="40"></a>
