--- a/รับผลิต.html
+++ b/รับผลิต.html
@@ -216,27 +216,27 @@
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="mainweb.html"><img src="logo.jpg" height="30"
-          width="30"></a>
+      <a class="navbar-brand" href="index.html"><img
+          src="logo.jpg" height="30" width="30"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
         <div class="navbar-nav">
-          <a class="nav-link" href="mainweb.html">หน้าแรก</a>
+          <a class="nav-link" href="index.html">หน้าแรก</a>
           <a class="nav-link" href="aboutus.html">เกี่ยวกับเรา</a>
           <div class="menu">
-            <div class="menu-button"><a class="nav-link">สินค้า </a></div>
+            <div class="menu-button"><a class="nav-link">สินค้า</a></div>
             <div class="dropdown">
               <a href="ตู้เบส.html">ตู้เบส</a>
               <a href="ตู้เสียงกลาง.html">ตู้เสียงกลาง</a>
               <a href="ตู้คอลัมม์.html">ตู้เสียงคอลัมม์</a>
               <a href="ดอกลำโพง.html">ดอกลำโพง</a>
-              <a href="พาวเวอร์แแอมป์.html">พาวเวอร์แอมป์</a>
+              <a href="พาวเวอร์แอมป์.html">พาวเวอร์แอมป์</a>
               <a href="ปากแหลม.html">ปากแหลม</a>
               <a href="สายลำโพง.html">สายลำโพง</a>
               <a href="ไมโครโฟน.html">ไมโครโฟน</a>
-              <a href="มิกเซอร์.html">มิกเซอร์</a>
+              <a href="มิกเซฮร์.html">มิกเซอร์</a>
               <a href="ครอส.html">ดิจิตัลครอสโอเวอร์</a>
               <a href="ปลั๊กไฟ.html">ปลั๊กไฟ</a>
               <a href="เฟรม.html">เฟรมแขวน</a>
@@ -247,7 +247,7 @@
             <div class="menu-button"><a class="nav-link">บริการ</a></div>
             <div class="dropdown">
               <a href="รับติดตั้ง.html">รับติดตั้ง</a>
-              <a href="ปรับจูนตู้.html">Alignment</a>
+              <a href="ปรับจูนตู้.html">ปรับจูนตู้</a>
               <a href="รับผลิต.html">รับผลิต</a>
               <a href="ระบบKTV.html">ระบบKTV</a>
             </div>
@@ -255,16 +255,15 @@
           <a class="nav-link" href="contact.html">ติดต่อเรา</a>
         </div>
         <form class="d-flex">
-          <input id="search" class="form-control" type="search" placeholder="ค้นหาสินค้า..." aria-label="Search">
+          <input class="form-control" type="search" placeholder="ค้นหาสินค้า..." aria-label="Search">
         </form>
       </div>
     </div>
   </nav>
 
-
   <nav aria-label="breadcrumb" style="margin: 20px;">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="mainweb.html">หน้าแรก</a></li>
+      <li class="breadcrumb-item"><a href="index.html">หน้าแรก</a></li>
       <li class="breadcrumb-item"><a href="รับผลิต.html">รับผลิต</a></li>
     </ol>
   </nav>
