--- a/Microtech-mt-1800td.html
+++ b/Microtech-mt-1800td.html
@@ -360,14 +360,14 @@
     
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="mainweb.html"><img
+          <a class="navbar-brand" href="index.html"><img
               src="logo.jpg" height="30" width="30"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <div class="navbar-nav">
-              <a class="nav-link" href="mainweb.html">หน้าแรก</a>
+              <a class="nav-link" href="index.html">หน้าแรก</a>
               <a class="nav-link" href="aboutus.html">เกี่ยวกับเรา</a>
               <div class="menu">
                 <div class="menu-button"><a class="nav-link">สินค้า</a></div>
@@ -377,7 +377,7 @@
                   <a href="ตู้คอลัมม์.html">ตู้เสียงคอลัมม์</a>
                   <a href="ดอกลำโพง.html">ดอกลำโพง</a>
                   <a href="พาวเวอร์แอมป์.html">พาวเวอร์แอมป์</a>
-                  <a href="ปากหลม.html">ปากแหลม</a>
+                  <a href="ปากแหลม.html">ปากแหลม</a>
                   <a href="สายลำโพง.html">สายลำโพง</a>
                   <a href="ไมโครโฟน.html">ไมโครโฟน</a>
                   <a href="มิกเซฮร์.html">มิกเซอร์</a>
@@ -404,10 +404,10 @@
           </div>
         </div>
       </nav>
-
+    
       <nav aria-label="breadcrumb" style="margin: 20px;">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="mainweb.html">หน้าแรก</a></li>
+          <li class="breadcrumb-item"><a href="index.html">หน้าแรก</a></li>
           <li class="breadcrumb-item"><a href="พาวเวอร์แอมป์.html">พาวเวอร์แอมป์</a></li>
           <li class="breadcrumb-item active" aria-current="page">MICROTECH-MT-1800TD</li>
         </ol>
