--- a/Wss-sd-1460.html
+++ b/Wss-sd-1460.html
@@ -360,14 +360,14 @@
     
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="mainweb.html"><img
+          <a class="navbar-brand" href="index.html"><img
               src="logo.jpg" height="30" width="30"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <div class="navbar-nav">
-              <a class="nav-link" href="mainweb.html">หน้าแรก</a>
+              <a class="nav-link" href="index.html">หน้าแรก</a>
               <a class="nav-link" href="aboutus.html">เกี่ยวกับเรา</a>
               <div class="menu">
                 <div class="menu-button"><a class="nav-link">สินค้า</a></div>
@@ -377,7 +377,7 @@
                   <a href="ตู้คอลัมม์.html">ตู้เสียงคอลัมม์</a>
                   <a href="ดอกลำโพง.html">ดอกลำโพง</a>
                   <a href="พาวเวอร์แอมป์.html">พาวเวอร์แอมป์</a>
-                  <a href="ปากหลม.html">ปากแหลม</a>
+                  <a href="ปากแหลม.html">ปากแหลม</a>
                   <a href="สายลำโพง.html">สายลำโพง</a>
                   <a href="ไมโครโฟน.html">ไมโครโฟน</a>
                   <a href="มิกเซฮร์.html">มิกเซอร์</a>
@@ -404,10 +404,10 @@
           </div>
         </div>
       </nav>
-
+    
       <nav aria-label="breadcrumb" style="margin: 20px;">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="mainweb.html">หน้าแรก</a></li>
+          <li class="breadcrumb-item"><a href="index.html">หน้าแรก</a></li>
           <li class="breadcrumb-item"><a href="พาวเวอร์แอมป์.html">พาวเวอร์แอมป์</a></li>
           <li class="breadcrumb-item active" aria-current="page">WSS SD-1460</li>
         </ol>
@@ -438,7 +438,13 @@
         <div class="features">
           <h3>สเปค</h3>
           <ul>
-            <li></li>
+            <li>8Ω stereo output 1600W x4</li>
+            <li>4Ω stereo output 2400W x4</li>
+            <li>2Ω stereo output 3600W x4</li>
+            <li>Frequency response 20Hz-20KHz (±0.5)</li>
+            <li>Conversion Rate >45V</li>
+            <li>Damping(500Hz-1KHz) >500Ω</li>
+            <li>Input sensitivity 32dB/35dB/38dB/41dB</li>
           </ul>
         </div>
 
