--- a/Pak-5.html
+++ b/Pak-5.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  
+    <link rel="icon" type="image/png" href="logo.jpg">
     <style>
       body {
         font-family: 'Arial', sans-serif;
