--- a/ครอส.html
+++ b/ครอส.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
+  <link rel="icon" type="image/png" href="logo.jpg">
   <style>
     body {
       font-family: 'Sarabun', sans-serif;
@@ -595,7 +595,7 @@
       </button>
       <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
         <div class="navbar-nav">
-          <a class="nav-link" href="mainweb.html">หน้าแรก</a>
+          <a class="nav-link" href="index.html">หน้าแรก</a>
           <a class="nav-link" href="aboutus.html">เกี่ยวกับเรา</a>
           <div class="menu">
             <div class="menu-button"><a class="nav-link">สินค้า</a></div>
@@ -635,7 +635,7 @@
 
   <nav aria-label="breadcrumb" style="margin: 20px;">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="mainweb.html">หน้าแรก</a></li>
+      <li class="breadcrumb-item"><a href="index.html">หน้าแรก</a></li>
       <li class="breadcrumb-item"><a href="ครอส.html">ครอสโอเวอร์</a></li>
     </ol>
   </nav>
