--- a/aboutus.html
+++ b/aboutus.html
@@ -359,12 +359,12 @@
     <h3>ฝ่ายบริหาร</h3>
     <div class="team">
       <div class="team-member">
-        <img src="https://scontent.fkkc4-2.fna.fbcdn.net/v/t39.30808-1/472114299_4682156928676585_1605376505317620331_n.jpg?stp=cp0_dst-jpg_s80x80_tt6&_nc_cat=103&ccb=1-7&_nc_sid=1d2534&_nc_ohc=o0WcobXXrTcQ7kNvwG5NXXA&_nc_oc=Adm96jTstLJO2dz5XNOryC9CJlpA7xLmgv_laETMI2jS5waiC1PVDvEDJ3rCR6hKQMeZoJliCJtmClVO_RC32IQZ&_nc_zt=24&_nc_ht=scontent.fkkc4-2.fna&_nc_gid=4vQAVLgkw6hkJRk0yu42Kg&oh=00_AfJjRgasslkqnPe41SGaGsVW8918ulUfSYAOXei31YSvpA&oe=68287CB5" alt="Team">
+        <img src="CEO.jpg" alt="Team">
         <h4>วีระพงษ์ นานอก</h4>
         <p>ผู้ก่อตั้ง / CEO</p>
       </div>
       <div class="team-member">
-        <img src="https://scontent.fkkc4-2.fna.fbcdn.net/v/t39.30808-1/472041731_3980600452258923_3697829431172462216_n.jpg?stp=cp6_dst-jpg_s80x80_tt6&_nc_cat=106&ccb=1-7&_nc_sid=1d2534&_nc_ohc=97tlXWZLgDIQ7kNvwEoFc98&_nc_oc=AdmS8Tb4m7JkvKfoSV1VN-c992DSkuYEYRhHnAQnNxhgi72uWfF3DI2JaYiCMOYLAVua7txal03aKOvexcpOVJlI&_nc_zt=24&_nc_ht=scontent.fkkc4-2.fna&_nc_gid=gMYwZxzERUfE1lJmtTMbYQ&oh=00_AfL93uFO61bQua9RgN9MoURILorbml1-sqNY1ZO-iHMGdw&oe=682875E9" alt="Team">
+        <img src="joff.jpg" alt="Team">
         <h4>นงลักษณ์ นานอก</h4>
         <p>ผู้ร่วมก่อตั้ง / CFO</p>
       </div>
