--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
       </button>
       <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
         <div class="navbar-nav">
-          <a class="nav-link" href="mainweb.html">หน้าแรก</a>
+          <a class="nav-link" href="index.html">หน้าแรก</a>
           <a class="nav-link" href="aboutus.html">เกี่ยวกับเรา</a>
           <div class="menu">
             <div class="menu-button"><a class="nav-link">สินค้า </a></div>
