--- a/Set-Audio-12.html
+++ b/Set-Audio-12.html
@@ -435,9 +435,10 @@
         <div class="features">
           <h3>สเปค</h3>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>SUPER-18</li>
+            <li>ADA-12s</li>
+            <li>MONITOR</li>
+            <li>เซ็ตแร็ค</li>
           </ul>
         </div>
         <div class="contact-links">
