--- a/Set-Audio-13.html
+++ b/Set-Audio-13.html
@@ -437,11 +437,8 @@
           <ul>
             <li>SUPER-18             30pcs</li>
             <li>AP-112               24pcs</li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>ชุดแร็คจัดเต็ม</li>
+          
           </ul>
         </div>
 
