--- a/STA-12B&C-Neodiem.html
+++ b/STA-12B&C-Neodiem.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  
+    <link rel="icon" type="image/png" href="logo.jpg">
     <style>
       body {
         font-family: 'Arial', sans-serif;
@@ -420,7 +420,7 @@
         <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide"><img src="loundspeaker/STA-12B_C-Neodiem-1-removebg-preview.png" alt="สินค้า 1"></div>
-            <div class="swiper-slide"><img src="loundspeaker/STA-12B_C-Neodiem-2-removebg-preview.png" alt="สินค้า 2"></div>
+            <div class="swiper-slide"><img src="loundspeaker/STA-12B_C-Neodiem-2-removebg-preview (1).png" alt="สินค้า 2"></div>
             <div class="swiper-slide"><img src="loundspeaker/STA-12B_C-Neodiem-3-removebg-preview.png" alt="สินค้า 2"></div>
             <div class="swiper-slide"><img src="loundspeaker/STA-12B_C-Neodiem-4-removebg-preview.png " alt="สินค้า 2"></div>
         </div>
