--- a/aboutus.html
+++ b/aboutus.html
@@ -464,9 +464,9 @@
         <div class="col-md-3 col-sm-6 mb-3">
           <h5 class="fw-bold">เมนูหลัก</h5>
           <ul class="list-unstyled">
-            <li><a href="mainweb.html" class="text-light text-decoration-none">เกี่ยวกับเรา</a></li>
-            <li><a href="mainweb.html" class="text-light text-decoration-none">สินค้า</a></li>
-            <li><a href="mainweb.html" class="text-light text-decoration-none">บริการ</a></li>
+            <li><a href="index.html" class="text-light text-decoration-none">เกี่ยวกับเรา</a></li>
+            <li><a href="index.html" class="text-light text-decoration-none">สินค้า</a></li>
+            <li><a href="index.html" class="text-light text-decoration-none">บริการ</a></li>
           </ul>
         </div>
       </div>
