--- a/KANE-PRICK.html
+++ b/KANE-PRICK.html
@@ -442,12 +442,12 @@
         <div class="features">
           <h3>สเปค</h3>
           <ul>
-            <li> </li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Nominal Diameter    18/457 in/mm</li>
+            <li>Nominal power handling 800-1000 Watts</li>
+            <li>Nominal Impedance 8 ohm</li>
+            <li>C resistance 5.2 ohm</li>
+            <li>Sensitivity           96 dB</li>
+            <li>Frequency range (-10dB max) 34-2200 Hz</li>
           </ul>
         </div>
 
