--- a/PR-18_2200*40.html
+++ b/PR-18_2200*40.html
@@ -419,7 +419,7 @@
       <div class="product-images">
         <div class="swiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="loundspeaker/PR-18-1-removebg-preview.png" alt="สินค้า 1"></div>
+            <div class="swiper-slide"><img src="loundspeaker/PR-18-1-removebg-preview-removebg-preview.png" alt="สินค้า 1"></div>
             <div class="swiper-slide"><img src="loundspeaker/PR-18-2-removebg-preview.png" alt="สินค้า 2"></div>
             <div class="swiper-slide"><img src="loundspeaker/PR-18-3-removebg-preview.png" alt="สินค้า 2"></div>
             <div class="swiper-slide"><img src="loundspeaker/PR-18-4-removebg-preview.png" alt="สินค้า 2"></div>
@@ -440,13 +440,12 @@
         <div class="features">
           <h3>สเปค</h3>
           <ul>
-            <li>  </li>
-            <li></li>
-            <li> </li>
-            <li>
-                </li>
-            <li></li>
-            <li></li>
+            <li>Nominal Diameter     316 mm</li>
+            <li>Rate Impedance         8 ohms</li>
+            <li>Power Rating         600 W</li>
+            <li>Program Power       1200 W</li>
+            <li>Sensitivity           98 dB</li>
+            <li>Frequency Range  50-200 Hz</li>
           </ul>
         </div>
 
