--- a/STA-12B&C-Neodiem.html
+++ b/STA-12B&C-Neodiem.html
@@ -440,12 +440,12 @@
         <div class="features">
           <h3>สเปค</h3>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Nominal Diameter     316 mm</li>
+            <li>Rate Impedance         8 ohms</li>
+            <li>Power Rating         600 W</li>
+            <li>Program Power       1200 W</li>
+            <li>Sensitivity           98 dB</li>
+            <li>Frequency Range  70-2500 Hz</li>
           </ul>
         </div>
 
