--- a/STA-12Ev.html
+++ b/STA-12Ev.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  
+    <link rel="icon" type="image/png" href="logo.jpg">
     <style>
       body {
         font-family: 'Arial', sans-serif;
@@ -440,12 +440,15 @@
         <div class="features">
           <h3>สเปค</h3>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>ดอกลำโพง12”(Mid)</li>
+            <li>Line Array
+              Voice Coil 3” </li>
+            <li>Rate impedance 9 โอมห์</li>
+            <li>  Power Rating (AES) 450 Watts</li>
+            <li>Power Program 900 Watts,</li>
+            <li> Sensitivity**97 dB.</li>
+            <li> Frequency Range 60Hz-5KHz</li>
+           
           </ul>
         </div>
 
