--- a/STA-L10RCF.html
+++ b/STA-L10RCF.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  
+    <link rel="icon" type="image/png" href="logo.jpg">
     <style>
       body {
         font-family: 'Arial', sans-serif;
@@ -440,12 +440,12 @@
         <div class="features">
           <h3>สเปค</h3>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Nominal Diameter     316 mm</li>
+            <li>Rate Impedance         8 ohms</li>
+            <li>Power Rating         600 W</li>
+            <li>Program Power       1200 W</li>
+            <li>Sensitivity           97 dB</li>
+            <li>Frequency Range  70-2500 Hz</li>
           </ul>
         </div>
 
