--- a/index.html
+++ b/index.html
@@ -1174,7 +1174,7 @@
             <div class="swiper-slide">
               <div class="link"><a href="KANE-PRICK.html" style="text-decoration: none;">
                 <div class="card">
-                 <img src="loundspeaker/KANE-Prik-1-removebg-preview.png" class="card-img-top" alt="สินค้า 9">
+                 <img src="loundspeaker/S__61816835_0-removebg-preview.png" class="card-img-top" alt="สินค้า 9">
                     <div class="card-body text-center">
                       <h5 class="card-title">KANE พริกขี้หนู</h5>
                       <p class="card-text">รายละเอียดสินค้า</p>
@@ -1414,9 +1414,9 @@
         <div class="col-md-3 col-sm-6 mb-3">
           <h5 class="fw-bold">เมนูหลัก</h5>
           <ul class="list-unstyled">
-            <li><a href="mainweb.html" class="text-light text-decoration-none">เกี่ยวกับเรา</a></li>
-            <li><a href="mainweb.html" class="text-light text-decoration-none">สินค้า</a></li>
-            <li><a href="mainweb.html" class="text-light text-decoration-none">บริการ</a></li>
+            <li><a href="index.html" class="text-light text-decoration-none">เกี่ยวกับเรา</a></li>
+            <li><a href="index.html" class="text-light text-decoration-none">สินค้า</a></li>
+            <li><a href="index.html" class="text-light text-decoration-none">บริการ</a></li>
           </ul>
         </div>
       </div>
