--- a/PR-18_2200*40.html
+++ b/PR-18_2200*40.html
@@ -440,12 +440,11 @@
         <div class="features">
           <h3>สเปค</h3>
           <ul>
-            <li>Nominal Diameter     316 mm</li>
-            <li>Rate Impedance         8 ohms</li>
-            <li>Power Rating         600 W</li>
-            <li>Program Power       1200 W</li>
-            <li>Sensitivity           98 dB</li>
-            <li>Frequency Range  50-200 Hz</li>
+            <li>ดอกลำโพงขนาด 18 นิ้ว</li>
+            <li>กำลังขับ 1200 วัตต์</li>
+            <li>ขนาดวอยส์ 4 นิ้ว</li>
+            <li>ตอบสนองความถี่ 50-200 Hz</li>
+          
           </ul>
         </div>
 
